svg -> png for logo

--- a/tutorials/mega_tutorial.ipynb
+++ b/tutorials/mega_tutorial.ipynb
@@ -7,7 +7,7 @@
     "id": "NzWFca3cB9oe"
    },
    "source": [
-    "![alt text](https://easyvvuq.readthedocs.io/en/latest/_static/circle-logo.svg)\n",
+    "![alt text](https://easyvvuq.readthedocs.io/en/latest/_static/circle-logo.png)\n",
     "\n",
     "Vytautas Jancauskas 2020\n",
     "\n",
